// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Message can marshal a message with a request set 1`] = `"{"request":"eyJjYWxsIjoiMSIsImZ1bmN0aW9uIjoiUHJpbnRsbiIsImFyZ3MiOlsiSWtobGJHeHZMQ0IzYjNKc1pDRWkiXX0=","response":""}"`;

exports[`Message can unmarshal a message with a request set 1`] = `
{
  "request": "eyJjYWxsIjoiMSIsImZ1bmN0aW9uIjoiUHJpbnRsbiIsImFyZ3MiOlsiSWtobGJHeHZMQ0IzYjNKc1pDRWkiXX0=",
  "response": "",
}
`;

exports[`Request can marshal a simple request 1`] = `"eyJjYWxsIjoiMSIsImZ1bmN0aW9uIjoiUHJpbnRsbiIsImFyZ3MiOlsiSWtobGJHeHZMQ0IzYjNKc1pDRWkiXX0="`;

exports[`Request can unmarshal a simple request 1`] = `
{
  "args": [
    "Hello, world!",
  ],
  "functionName": "Println",
}
`;

exports[`Request can marshal a complex request 1`] = `"eyJjYWxsIjoiMS0yLTMiLCJmdW5jdGlvbiI6IkFkZCIsImFyZ3MiOlsiTVE9PSIsIk1nPT0iLCJleUpoYzJSbUlqb3hmUT09Il19"`;

exports[`Request can unmarshal a complex request 1`] = `
{
  "args": [
    1,
    2,
    {
      "asdf": 1,
    },
  ],
  "functionName": "Add",
}
`;

exports[`Response can marshal a simple response with no error 1`] = `"eyJjYWxsIjoiMSIsInZhbHVlIjoiZEhKMVpRPT0iLCJlcnIiOiIifQ=="`;

exports[`Response can unmarshal a simple response with no error 1`] = `
{
  "err": "",
  "value": true,
}
`;

exports[`Response can marshal a simple response with error 1`] = `"eyJjYWxsIjoiMSIsInZhbHVlIjoiZEhKMVpRPT0iLCJlcnIiOiJ0ZXN0IGVycm9yIn0="`;

exports[`Response can unmarshal a simple response with error 1`] = `
{
  "err": "test error",
  "value": true,
}
`;

exports[`Response can marshal a complex response with no error 1`] = `"eyJjYWxsIjoiMSIsInZhbHVlIjoiZXlKaElqb3hMQ0ppSWpwN0ltTWlPaUowWlhOMEluMTkiLCJlcnIiOiIifQ=="`;

exports[`Response can unmarshal a complex response with no error 1`] = `
{
  "err": "",
  "value": {
    "a": 1,
    "b": {
      "c": "test",
    },
  },
}
`;

exports[`Response can marshal a complex response with error 1`] = `"eyJjYWxsIjoiMSIsInZhbHVlIjoiZXlKaElqb3hMQ0ppSWpwN0ltTWlPaUowWlhOMEluMTkiLCJlcnIiOiJ0ZXN0IGVycm9yIn0="`;

exports[`Response can unmarshal a complex response with error 1`] = `
{
  "err": "test error",
  "value": {
    "a": 1,
    "b": {
      "c": "test",
    },
  },
}
`;

exports[`Message can marshal a message with a response set 1`] = `"{"request":"","response":"eyJjYWxsIjoiMSIsInZhbHVlIjoiZEhKMVpRPT0iLCJlcnIiOiIifQ=="}"`;

exports[`Message can unmarshal a message with a response set 1`] = `
{
  "request": "",
  "response": "eyJjYWxsIjoiMSIsInZhbHVlIjoiZEhKMVpRPT0iLCJlcnIiOiIifQ==",
}
`;
